--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -8,8 +8,13 @@ jobs :
     steps :
       - name : Getting the application code
         uses : actions/checkout@v3
-      - name : Setup Maven Action
-        uses : s4u/setup-maven-action@v1.7.0
+      # - name : Setup Maven Action
+      #   uses : s4u/setup-maven-action@v1.7.0
+      - name : Set up JDK 17
+        uses : actions/setup-java@v3
+        with :
+          java-version : '17'
+          distribution : 'temurin'
       - name : Build Stage
         run : mvn clean compile
       - name : Testing Stage
