--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -38,19 +38,20 @@ jobs :
         uses: actions/download-artifact@v3
         with:
           name: jar-file
-      - name: Commit files
+      - name: Listing all files
         run: ls -al
-      #   run: |
-      #     git init -b main
-      #     git config --global user.email $email
-      #     git config --global user.name $username
-      #     git add .
-      #     git commit -a -m "Adding the Artifact File(JAR File)"
-      # - name: Push changes
-      #   uses: ad-m/github-push-action@master
-      #   with:
-      #     github_token: $pat
-      #     branch: artifacts-store
+      - name: Commit files
+        run: |
+          git init -b main
+          git config --global user.email $email
+          git config --global user.name $username
+          git add .
+          git commit -a -m "Adding the Artifact File(JAR File)"
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.PAT }}
+          branch: artifacts-store
       # - name:
       #   run: |
       #     git clone ${{ github.repositoryUrl }}
