--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -50,7 +50,7 @@ jobs :
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.PAT }}
+          github_token: $pat
           branch: artifacts-store
       # - name:
       #   run: |
