Updated Yml file

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -41,6 +41,7 @@ jobs :
       - name: Listing all files
         run: ls -al
       - name: Commit files
+        working-directory: assignment-hello-spring/
         run: |
           git init -b main
           git config --global user.email $email
