--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -43,6 +43,7 @@ jobs :
       - name: Commit files
         # working-directory: assignment-hello-spring/
         run: |
+          git init 
           git config --global user.email $email
           git config --global user.name $username
           git add .
