--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -58,5 +58,8 @@ jobs :
           git config --global user.name $username
           git add .
           git commit -a -m "Adding the Artifact File(JAR File)"
-          git push "https://$email:${{ secrets.PAT }}@github.com/sunil716/assignment-hello-spring.git" new-branch
+          git branch
+          git remote -v
+
+          git push origin new-branch #"https://$email:${{ secrets.PAT }}@github.com/sunil716/assignment-hello-spring.git" new-branch
       
