--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -38,7 +38,7 @@ jobs :
         uses: actions/checkout@v3
         with:
           repository: sunil716/assignment-hello-spring
-          ref: new-branch
+          ref: artifacts-store
       - name: Downloading the Artifact(JAR File)
         uses: actions/download-artifact@v3
         with:
@@ -61,5 +61,6 @@ jobs :
           git branch
           git remote -v
 
-          git push origin new-branch #"https://$email:${{ secrets.PAT }}@github.com/sunil716/assignment-hello-spring.git" new-branch
+          git push origin artifacts-store
+          #"https://$email:${{ secrets.PAT }}@github.com/sunil716/assignment-hello-spring.git" new-branch
       
