--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -46,3 +46,9 @@ jobs :
         with:
           name: jar-file
           path: target/*.jar
+      - name: Test
+        run: |
+          curl -X POST https://api.github.com/repos/:userName/:repoName/dispatches \
+          -H 'Accept: application/vnd.github.everest-preview+json' \
+          -u ${{ secrets.PAT }} \
+          --data '{"event_type": "Trigger Workflow", "client_payload": { "repository": "'"$GITHUB_REPOSITORY"'" }}'
