--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -32,4 +32,5 @@ jobs :
           path: target/*.jar
 
   adding-artifacts:
+    needs: build-test-package
     uses: ./.github/workflows/add-artifacts.yml
