--- a/.github/workflows/add-artifacts.yml
+++ b/.github/workflows/add-artifacts.yml
@@ -2,6 +2,11 @@ name: adding-artifacts
 
 on: workflow_call
 
+env:
+  email: sunilgajula333@gmail.com
+  username: sunil716
+  pat: ${{ secrets.PAT }}
+
 jobs:
   adding-artifacts:
     runs-on: ubuntu-latest
