--- a/.github/workflows/build_test_package.yml
+++ b/.github/workflows/build_test_package.yml
@@ -28,3 +28,5 @@ jobs :
   adding-artifacts:
     needs: build-test-package
     uses: ./.github/workflows/add-artifacts.yml
+    with: 
+      artifact-name: jar-file
