--- a/.github/workflows/add-artifacts.yml
+++ b/.github/workflows/add-artifacts.yml
@@ -8,6 +8,9 @@ on:
         required: true
         default: jar-file
         type: string
+env:
+  email: ${{ secrets.GH_EMAIL }}
+  username: ${{ secrets.GH_USERNAME }}
 
 jobs:
   adding-artifacts:
@@ -29,8 +32,8 @@ jobs:
           git branch
       - name: Commit files
         run: |
-          git config --global user.email ${{ secrets.GH_EMAIL }}
-          git config --global user.name ${{ secrets.GH_USERNAME }}
+          git config --global user.email $email
+          git config --global user.name $username
           git add .
           git commit -a -m "Adding the Artifact File(JAR File)"
           git branch
